--- a/styles.css
+++ b/styles.css
@@ -75,8 +75,9 @@ nav a:hover {
 
 .slide img {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     object-fit: cover;
+    display: block;
 }
 
 .fade {
@@ -111,8 +112,7 @@ main {
 }
 
 .cta {
-    /* background-color: rgba(255, 255, 255, 0.9); */
-    background-color: gray;
+    background-color: rgba(128, 128, 128, 0.8);
     padding: 2rem;
     border-radius: 8px;
     margin: 2rem auto;
@@ -136,8 +136,7 @@ footer {
 .cta {
     text-align: center;
     padding: 4rem 2rem;
-    /* background-color: #f9f9f9; */
-    background-color: #808080;
+    background-color: rgba(128, 128, 128, 0.8);
    
 }
 
